--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "is-empty": "^1.2.0",
     "jsonwebtoken": "^8.3.0",
     "moment": "^2.23.0",
+    "mongodb": "^4.3.1",
     "mongoose": "^5.3.11",
     "node-fetch": "^3.1.1",
     "nodemon": "^2.0.14",
