--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "react-calendar": "^3.5.0",
     "react-dom": "^16.6.3",
     "react-icons": "^4.3.1",
+    "react-paginate": "^8.1.0",
     "react-plaid-link": "^3.2.1",
     "react-plaid-link-button": "0.0.4",
     "react-pro-sidebar": "^0.7.1",
