--- a/client/package.json
+++ b/client/package.json
@@ -11,7 +11,7 @@
     "mern-auth": "file:..",
     "prop-types": "^15.6.2",
     "react": "^16.6.3",
-    "react-calendar": "^3.5.0",
+    "react-calendar": "^3.6.0",
     "react-dom": "^16.6.3",
     "react-icons": "^4.3.1",
     "react-paginate": "^8.1.0",
@@ -19,6 +19,7 @@
     "react-plaid-link-button": "0.0.4",
     "react-pro-sidebar": "^0.7.1",
     "react-redux": "^5.1.1",
+    "react-router": "^6.2.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "4.0.3",
     "redux": "^4.0.1",
