--- a/client/package.json
+++ b/client/package.json
@@ -23,7 +23,8 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "4.0.3",
     "redux": "^4.0.1",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "zustand": "^3.7.0"
   },
   "scripts": {
     "start": "set PORT=3006 && craco start",
