--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
     "@types/react": "^17.0.36",
     "axios": "^0.24.0",
     "classnames": "^2.2.6",
+    "dayjs": "^1.11.1",
     "jwt-decode": "^2.2.0",
     "material-table": "^1.9.0",
     "mern-auth": "file:..",
